--- a/exercises/ex07/data_wrangling.ipynb
+++ b/exercises/ex07/data_wrangling.ipynb
@@ -606,11 +606,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a3e5c53ec2d4a5f697408540edef06c5b2f3d2815be0e792209162fb59331b8e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.10.6 64-bit (microsoft store)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -623,7 +621,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ac019dee71ffef3809770ffe242ff2d710330653f213693e1080cdb322017d07"
+   }
   }
  },
  "nbformat": 4,
