--- a/exercises/ex08/SimpyDemos.ipynb
+++ b/exercises/ex08/SimpyDemos.ipynb
@@ -738,7 +738,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -752,7 +752,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ac019dee71ffef3809770ffe242ff2d710330653f213693e1080cdb322017d07"
+   }
   }
  },
  "nbformat": 4,
